--- a/app/views/dda_expenditures/index.html.erb
+++ b/app/views/dda_expenditures/index.html.erb
@@ -7,10 +7,10 @@
 
   <%= image_tag Gchart.pie(:data => @dda_sum.values, :labels => @dda_sum.keys) %>
   <div class="btn-group">
-    <%= link_to 'Current month', dda_expenditures_path(current_month: true), class: 'btn'%> 
-    <%= link_to 'Fiscal year', dda_expenditures_path, class: 'btn'%> 
+    <%= link_to 'Current month', dda_expenditures_path(current_month: true), class: 'btn btn-default'%> 
+    <%= link_to 'Fiscal year', dda_expenditures_path, class: 'btn btn-default'%> 
   </div>
-    <div class="row-fluid">
+    <div class="row">
 <table class="table table-striped table-condensed table-responsive">
   <thead>
     <tr>
