--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,27 +1,33 @@
-<header class="navbar navbar-inverse navbar-fixed-top">
-          <div class="navbar-inner">
-          <div class="container-fluid">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" <%= link_to "UCL Tricerashopper", root_path %>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li>
-              <%= link_to "Help", help_path %>
-              </li>
-              <li>
-              <% if user_signed_in? %>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+       <a class="navbar-brand" <%= link_to "UCL Tricerashopper", root_path %>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><%= link_to "Help", help_path %></li>
+        <li>
+          <% if user_signed_in? %>
               <%= link_to "Logout", destroy_user_session_path, :method => :delete %>
             <% else %> 
              <%= link_to "Sign in", new_user_session_path %>
            <% end %>
-             
-         </li></ul>
-         <div id="banner"><%= image_tag("UC_logo.png") %></div>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-</header>
+        </li>
+       
+      </ul>
+     
+      <span class="nav navbar-nav navbar-right">
+        <%= image_tag "UC_logo.png" %>
+      </span>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
