--- a/app/views/losts/index.html.erb
+++ b/app/views/losts/index.html.erb
@@ -7,7 +7,7 @@
 
       <h2>Lost, Missing, Long-overdue</h2>
 
-      <div class="row-fluid">
+      <div class="row">
 
       <div class="span9">
         <%= render "search_box" %>
