--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -4,7 +4,9 @@
 <body>
   <div class="container-fluid">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-  <%= bootstrap_flash.html_safe %>
+  <% flash.each do |name, msg| -%>
+            <%= content_tag :div, sanitize(msg), class: "alert alert-#{name}" %>
+          <% end -%>
   <%= form_tag orders_path, method: :get do %>
     <div class="input-append">
       <%= text_field_tag :search, params[:search] %>
@@ -12,11 +14,11 @@
     <% end %>
   </div>
 </div>
-<div class="row-fluid">
-  <div class="span3">
+<div class="container-fluid">
+  <div class="col-md-3">
     <%= render "facets" %>
   </div>
-  <div class="span8">
+  <div class="col-md-8">
     <%= render "results_body" %>
   </div>
 </div>
@@ -24,15 +26,16 @@
    <div class="well">
     <%= link_to t('.new', :default => t("helpers.links.new")),
             new_order_path,
-            :class => 'btn' %>
+            :class => 'btn btn-default' %>
           <% if current_user.instance_of? Admin %>
             <%= link_to 'Download MARC', export_to_marc_orders_path(), class: 'btn default', data: {confirm: 'Download MARC will generate marc records for orders that have an accept status. Are you sure you\'re ready to create the MARC file?'} %> 
             <% end %>
-</div>
+    </div>
+
 <div class="pagination">
   <%= will_paginate @search.hits, renderer: BootstrapPagination::Rails %>
 </div>
-
+</div><!--close container-fluid div-->
 </div>
 </div>
 </body>
