--- a/app/views/problems/_show_actions.html.erb
+++ b/app/views/problems/_show_actions.html.erb
@@ -1,3 +1,3 @@
 <%- model_class = Problem %>
-  <%= link_to 'Back', problems_path, class: 'btn' %>
+  <%= link_to 'Back', problems_path, class: 'btn btn-default' %>
   <%= link_to 'Audit', audit_problem_path(@problem), remote: true, class: 'btn btn-success pull-right' ,title: 'Resubmit QC problem for review' %>
