--- a/app/views/problems/index.html.erb
+++ b/app/views/problems/index.html.erb
@@ -12,10 +12,10 @@
     <% end %>
   <br>
 </div>
-<div class="row-fluid">
-  <div class="span3">
+<div class="row">
+  <div class="col-md-3">
     <%= render 'facets' %>  </div>
-  <div class="span8">
+  <div class="col-md-8">
     <%=render 'results_body' %>
   </div>
   </div>
