--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,5 +5,5 @@
   <%= link_to "Marc Record Processing", marc_uploads_path %><br>
   <%= link_to "DDA Expenditures Report", dda_expenditures_path %><br>
   <%= link_to "Material Orders", orders_path %><br>
-  <%= link_to "MARC Record Download", marc_downloads_path %>
+  <%= link_to "Downloads", downloads_path %>
 </div>
