--- a/app/assets/stylesheets/losts.css.scss
+++ b/app/assets/stylesheets/losts.css.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Losts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.lost-content {
+  padding-top: 30px;
+}
+
+.lost-search {
+  padding-top: 30px;
+}
