--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,16 +1,15 @@
 <%- model_class = Order -%>
-<html>
-<%= render 'layouts/header' %>
-<body>
   <div class="container-fluid">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
   <% flash.each do |name, msg| -%>
             <%= content_tag :div, sanitize(msg), class: "alert alert-#{name}" %>
           <% end -%>
-  <%= form_tag orders_path, method: :get do %>
-    <div class="input-append">
-      <%= text_field_tag :search, params[:search] %>
+  <div class="input-group">
+    <%= form_tag orders_path, method: :get do %>
+      <span class="input-group-btn">
+      <%= text_field_tag :search, params[:search], class: 'form-control' %>
       <%= submit_tag "Search", name: nil, class: 'btn btn-default' %>
+    </span>
     <% end %>
   </div>
 </div>
@@ -28,7 +27,7 @@
             new_order_path,
             :class => 'btn btn-default' %>
           <% if current_user.instance_of? Admin %>
-            <%= link_to 'Download MARC', export_to_marc_orders_path(), class: 'btn default', data: {confirm: 'Download MARC will generate marc records for orders that have an accept status. Are you sure you\'re ready to create the MARC file?'} %> 
+            <%= link_to 'Download MARC', export_to_marc_orders_path(), class: 'btn btn-default', data: {confirm: 'Download MARC will generate marc records for orders that have an accept status. Are you sure you\'re ready to create the MARC file?'} %> 
             <% end %>
     </div>
 
@@ -38,5 +37,3 @@
 </div><!--close container-fluid div-->
 </div>
 </div>
-</body>
-</html>
