--- a/app/views/losts/_index_result.html.erb
+++ b/app/views/losts/_index_result.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <hr>
   <div class="col-xs-1">
-    <%= "#{lost.id}." %>
+    <%= "#{lost.item_number}" %>
   </div>
   <div class="col-xs-7">
     <div id="<%= "lost-#{lost.id}" %>">
