--- a/app/views/losts/_search_box.html.erb
+++ b/app/views/losts/_search_box.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-5">
     <div class="input-group">
   <%= form_tag losts_path, :method => :get do %>
       <span class="input-group-btn">
@@ -10,12 +10,24 @@
     </div>
   </div>
 
-<div class="col-md-1">
+<div class="col-md-2">
   <div class="dropdown">
-     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-        Sort
+    <%if params[:sort] == 'title'%>
+     <button class="btn btn-primary" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+        Title
         <span class="caret"></span>
       </button>
+    <% elsif params[:sort] == 'call_number'%>
+      <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          Call Number
+          <span class="caret"></span>
+      </button>
+    <% else %>
+      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          Sort
+          <span class="caret"></span>
+      </button>
+    <% end %>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
         <li><%= link_to "Title", request.params.merge({sort: :title}) %></li>
         <li><%= link_to "Call Number", request.params.merge({sort: :call_number}) %></li>
