--- a/app/views/orders/_facets.html.erb
+++ b/app/views/orders/_facets.html.erb
@@ -1,50 +1,64 @@
 <%- model_class = Order %>
+
+<% def remove_fac(ary,val) %>
+	<% remove = ary.dup %>
+	<% remove.delete(val) %>
+	<% remove %>
+<% end %>
+
 <div id="facets">
   <div class="well sidebar-nav">
     <ul class="nav nav-list">
       <h4>Status</h4>
         <% for row in @search.facet(:workflow_state).rows %>
-          <li>
-            <% if not (params[:rush].blank? and params[:reserve].blank?) and params[:state].blank? %>
-                <% %>
-                <!-- if user has clicked on rush , do nothing -->
-            <% elsif params[:state].blank? %>
-              <%= link_to model_class.human_attribute_name(row.value), state: row.value %>
-            <% else %>
-              <%= link_to "#{model_class.human_attribute_name(row.value)} (remove)", request.params.merge({state: nil, page: nil}) %> 
-            <% end %>
-          </li>
-        <% end %>
-        <% for row in @search.facet(:rush_order).rows %>
-         <li>
-            <% if params[:rush].blank? and not params[:state].blank? %>
-                <% %>
-                <!-- if user has clicked on an order status, do nothing -->
-            <% elsif params[:rush].blank? and not params[:reserve].blank? %>
-                <% %>
-                <!-- if user has clicked on reserve status, do nothing -->
-            <% elsif params[:rush].blank? %>
-              <%= link_to model_class.human_attribute_name("rush"), rush: row.value %>
-            <% else %>
-              <%= link_to "#{model_class.human_attribute_name("rush")} (remove)", request.params.merge({rush: nil, page: nil}) %> 
-            <% end %>
-          </li>
-        <% end %>
-        <% for row in @search.facet(:reserve).rows %>
-         <li>
-            <% if params[:reserve].blank? and not params[:state].blank? %>
-                <% %>
-                <!-- if user has clicked on an order status, do nothing -->
-            <% elsif params[:reserve].blank? and not params[:rush].blank? %>
-                <% %>
-                <!-- if user has clicked on rush status, do nothing -->
-            <% elsif params[:reserve].blank? %>
-              <%= link_to model_class.human_attribute_name("reserve"), reserve: row.value %>
-            <% else %>
-              <%= link_to "#{model_class.human_attribute_name("reserve")} (remove)", request.params.merge({reserve: nil, page: nil}) %> 
-            <% end %>
-          </li>
-        <% end %>
-     </ul>
+		    <% if params[:state].present? %>
+		      <% unless params[:state].include? row.value%>
+		        <li><%= link_to row.value, request.params.merge({state: params[:state] | [row.value], page: nil}) %></li>
+		      <% else %>
+		        <li><%= link_to "#{row.value} (remove)", request.params.merge({state: remove_fac(params[:state], row.value) }), {style: "color: red"} %></li>
+		      <% end %>
+		    <% else %>
+		      <li><%= link_to row.value, request.params.merge({state: [row.value], page: nil}) %></li>
+		    <% end %> 
+		<% end %>
+
+		<% for row in @search.facet(:rush_order).rows %>
+		    <% if params[:rush].present? %>
+		      <% unless params[:rush].include? row.value%>
+		        <li><%= link_to "#{model_class.human_attribute_name("rush")}", request.params.merge({rush: params[:rush] | [row.value], page: nil}) %></li>
+		      <% else %>
+		        <li><%= link_to "#{model_class.human_attribute_name("rush")} (remove)", request.params.merge({rush: nil, page:nil}) %>
+		      <% end %>
+		    <% else %>
+		        <li><%= link_to "#{model_class.human_attribute_name("rush")}", request.params.merge({rush: params[:rush] | [row.value], page: nil}) %></li>
+		    <% end %> 
+		<% end %>
+
+		<% for row in @search.facet(:reserve).rows %>
+		    <% if params[:reserve].present? %>
+		      <% unless params[:reserve].include? row.value%>
+		        <li><%= link_to "#{model_class.human_attribute_name("reserve")}", request.params.merge({reserve: params[:reserve] | [row.value], page: nil}) %></li>
+		      <% else %>
+		        <li><%= link_to "#{model_class.human_attribute_name("reserve")} (remove)", request.params.merge({reserve: nil, page:nil}) %>
+		      <% end %>
+		    <% else %>
+		        <li><%= link_to "#{model_class.human_attribute_name("reserve")}", request.params.merge({reserve: params[:reserve] | [row.value], page: nil}) %></li>
+		    <% end %> 
+		<% end %>
+	
+	<h4>Format</h4>	
+     
+        <% for row in @search.facet(:format).rows %>
+		    <% if params[:format].present? %>
+		      <% unless params[:format].include? row.value%>
+		        <li><%= link_to row.value, request.params.merge({format: params[:format] | [row.value], page: nil}) %></li>
+		      <% else %>
+		        <li><%= link_to "#{row.value} (remove)", request.params.merge({format: nil, page:nil}) %>
+		      <% end %>
+		    <% else %>
+		      <li><%= link_to row.value, request.params.merge({format: [row.value], page: nil}) %></li>
+		    <% end %> 
+		<% end %>
+	</ul>
   </div>
 </div>
