update help contact info

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -5,7 +5,7 @@
     <p>Tricerashopper is the collection development portal for the University of Cincinnati Libraries. This site includes several services for selectors including LMLO report, Materials Orer Form, and DDA Expenditure Report.</p></div>
 </div>
   <h4>Accounts</h4>
-  <p>Contact <%= mail_to 'mcmillwh@ucmail.uc.edu', 'Bill McMillin' %> for account creation and password assistance. Tricerashopper is not integrated with the University Central Login system. </p>
+  <p>Contact <%= mail_to 'vanmiljf@ucmail.uc.edu', 'James Van Mil' %> for account creation and password assistance. Tricerashopper is not integrated with the University Central Login system. </p>
     <h4>Materials Order Form</h4>
     <p>The materials order form and index allows selectors to submit purchase requests and monitor their progress. The index of orders shows title, author, fund, cost, date, and workflow status. Initial order requests are created with a status of <i>new</i>. The form will generate an email confirmation, sent to the requestor and cc'd to site administrators. All URLs are stable for individual orders as well as the order form. Requests are reviewed by Content Services staff and processed in the order submitted.</p>
     <p>Materials can be requested by Selectors or assistants (with delegation and review by selectors). Contact Content Services if you are a Selector and you interested in delegating permission to request materials through the form.</p>
@@ -14,7 +14,7 @@
       <h4>DDA Expenditure Report</h4>
       <p> TBA</p>
       <h4>Contact</h4>
-      <p>Questions and requests to <%= mail_to 'mcmillwh@ucmail.uc.edu', 'Bill McMillin' %>.</p>
+      <p>Questions and requests to <%= mail_to 'vanmiljf@ucmail.uc.edu', 'James Van Mil' %>.</p>
 
       <% if current_user.instance_of? Admin %>
         <ul class="nav nav-list">
